# QuantumLink

./: Cargo.toml  LICENSE  README.md  changelog.md  deny.toml  product.md
.github/workflows/: ci.yml  release.yml
context/: product.md  prompt.md
crates/ql-core/: Cargo.toml
crates/ql-core/src/: lib.rs
crates/ql-crypto/: Cargo.toml
crates/ql-crypto/src/: lib.rs
crates/ql-daemon/: Cargo.toml
crates/ql-daemon/src/: main.rs
crates/ql-firewall/: Cargo.toml
crates/ql-firewall/src/: lib.rs
crates/ql-gui/: Cargo.toml
crates/ql-gui/src/: lib.rs
crates/ql-macos-app/: Cargo.toml
crates/ql-macos-app/src/: lib.rs  main.rs
crates/ql-macos-app/tests/: service_cli.rs
crates/ql-macos-helper/: Cargo.toml
crates/ql-macos-helper/src/: main.rs
crates/ql-macos-runtime/: Cargo.toml
crates/ql-macos-runtime/src/: lib.rs
crates/ql-mesh/: Cargo.toml
crates/ql-mesh/src/: lib.rs
crates/ql-pair/: Cargo.toml
crates/ql-pair/src/: lib.rs
crates/ql-relay/: Cargo.toml
crates/ql-relay/src/: lib.rs
crates/ql-rosenpass/: Cargo.toml
crates/ql-rosenpass/src/: lib.rs
crates/ql-server/: Cargo.toml
crates/ql-server/src/: main.rs
crates/ql-signal/: Cargo.toml
crates/ql-signal/src/: lib.rs
crates/ql-stun/: Cargo.toml
crates/ql-stun/src/: lib.rs
crates/ql-wireguard/: Cargo.toml
crates/ql-wireguard/src/: lib.rs
docs/: architecture.md  cryptography.md  macos-distribution.md  macos-mode-a-validation.md  macos-pivot-plan.md  macos-runtime-architecture.md  pairing-protocol.md  threat-model.md
macos/QuantumLinkMacApp/: Package.swift
macos/QuantumLinkMacApp/Config/: Bundles.xcconfig  QuantumLinkMacApp-Info.plist  QuantumLinkMacApp.xcconfig  QuantumLinkPacketTunnelProvider-Info.plist  QuantumLinkPacketTunnelProvider.entitlements  QuantumLinkPacketTunnelProvider.xcconfig  QuantumLinkTunnelController.xcconfig  Signing.xcconfig
macos/QuantumLinkMacApp/QuantumLinkMacApp.xcodeproj/: project.pbxproj
macos/QuantumLinkMacApp/QuantumLinkMacApp.xcodeproj/xcshareddata/xcschemes/: QuantumLinkMacApp.xcscheme  QuantumLinkTunnelController.xcscheme
macos/QuantumLinkMacApp/Scripts/: archive_release.sh  generate_xcodeproj.rb  mode_a_validate.sh
macos/QuantumLinkMacApp/Sources/QuantumLinkMacApp/: ContentView.swift  QuantumLinkMacApp.swift  RuntimeShellModel.swift
macos/QuantumLinkMacApp/Sources/QuantumLinkPacketTunnelProvider/: QuantumLinkPacketTunnelProvider.swift
macos/QuantumLinkMacApp/Sources/QuantumLinkTunnelController/: main.swift
macos/QuantumLinkMacApp/Sources/QuantumLinkTunnelShared/: TunnelModels.swift
