[workspace]
members = [
    "crates/ql-core",
    "crates/ql-crypto",
    "crates/ql-macos-app",
    "crates/ql-macos-helper",
    "crates/ql-macos-runtime",
    "crates/ql-wireguard",
    "crates/ql-rosenpass",
    "crates/ql-firewall",
    "crates/ql-stun",
    "crates/ql-signal",
    "crates/ql-relay",
    "crates/ql-mesh",
    "crates/ql-pair",
    "crates/ql-daemon",
    "crates/ql-server",
    "crates/ql-gui",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"
rust-version = "1.82"
[workspace.dependencies]
oqs = { version = "0.10.1", default-features = false, features = ["ml_dsa", "ml_kem", "vendored"] }
