[package]
name = "ql-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "signature"] }
getrandom = "0.2"
hkdf = "0.12"
oqs.workspace = true
ql-core = { path = "../ql-core" }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
sha3 = "0.10"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
