[package]
name = "ql-macos-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ipnetwork = "0.21.1"
ql-core = { path = "../ql-core" }
ql-firewall = { path = "../ql-firewall" }
ql-gui = { path = "../ql-gui" }
ql-macos-runtime = { path = "../ql-macos-runtime" }
ql-wireguard = { path = "../ql-wireguard" }

[[bin]]
name = "ql-macos-app"
path = "src/main.rs"