[package]
name = "ql-macos-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
ipnetwork = "0.21.1"
ql-core = { path = "../ql-core" }
ql-firewall = { path = "../ql-firewall" }
ql-gui = { path = "../ql-gui" }
ql-macos-runtime = { path = "../ql-macos-runtime" }
ql-wireguard = { path = "../ql-wireguard" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44", features = ["macros", "net", "rt-multi-thread", "sync"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "ql-macos-app"
path = "src/main.rs"