[package]
name = "ql-macos-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ipnetwork = "0.21.1"
ql-core = { path = "../ql-core" }
ql-firewall = { path = "../ql-firewall" }
ql-wireguard = { path = "../ql-wireguard" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"