[package]
name = "ql-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "qls"
path = "src/main.rs"

[dependencies]
ql-core = { path = "../ql-core" }
ql-relay = { path = "../ql-relay" }
ql-signal = { path = "../ql-signal" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "time"] }
