[package]
name = "ql-wireguard"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ipnetwork = { version = "0.21.1", features = ["serde"] }
ql-core = { path = "../ql-core" }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.8"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31.2", features = ["user"] }
wireguard-uapi = "3.0.1"
